packages/isar_generator/test/errors/property/null_byte.dart
// Bytes cannot be nullable

import 'package:isar/isar.dart';

@Collection()
class Model {
  Id? id;

  late byte? prop;
}
